--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="layer">
                         <h3>Portfolio</h3>
                         <p>The app connects you to the talented people around the world. Download it from play store.</p>
-                        <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://github.com/anmolbiranwar/Portfolio"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
