--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="layer">
                         <h3>News Website- API Based Project</h3>
                         <p>Discover a world of news at your fingertips with our comprehensive News Website powered by the latest News API. Stay updated on global events, breaking news, politics, business, technology, entertainment, sports, and more. Our user-friendly interface presents curated articles from trusted sources, providing you with accurate and timely information.</p>
-                        <a href="https://github.com/anmolbiranwar/News_App"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="http://127.0.0.1:5501/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
