--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <img src="images/work-3.png" alt="">
                     <div class="layer">
                         <h3>Portfolio</h3>
-                        <p>The app connects you to the talented people around the world. Download it from play store.</p>
+                        <p>"My name is Anmol Biranwar, and my portfolio is a representation of all that I have learned."</p>
                         <a href="https://github.com/anmolbiranwar/Portfolio"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
