--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <a href="https://twitter.com/anmol_biranwar"><i class="fa-brands fa-twitter"></i></a>
                         <a href="https://www.linkedin.com/in/anmol-biranwar-165949205/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
-                    <a href="images/my-cv.pdf" download="" class="btn btn2">Download CV</a>
+                    <a href="images/Anmol_Frontend_Fresher.pdf" download="" class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form>
