--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="headert-text">
-                <p>UI/UX Designer</p>
-                <h1>Hi, I'm <span>Anmol Biranwar</span><br>From Gondia, Maharashtra</h1>
+                <!-- <p>UI/UX Designer</p> -->
+                <h1>Hi, I'm <span>Anmol Biranwar</span><br>React Developer</h1>
             </div>
         </div>
     </div>
@@ -39,10 +39,10 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>My name is Anmol Biranwar, and I am a passionate and skilled frontend developer with a strong focus on creating exceptional user experiences. With expertise in HTML, CSS, JavaScript and frontend ReactJS framework, I build visually stunning and responsive websites and web applications.</p>
+                <p>My name is Anmol Biranwar, and I am a passionate and skilled React Frontend-Developer with a strong focus on creating exceptional user experiences. With expertise in HTML, CSS, JavaScript and frontend ReactJS framework, I build visually stunning and responsive websites and web applications.</p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                    <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                    <p class="tab-links" onclick="opentab('experience')">Certification</p>
                     <p class="tab-links" onclick="opentab('education')">Education</p>
                 </div>
                 <div class="tab-contents active-tab" id="skills">
@@ -54,15 +54,15 @@
                 </div>
                 <div class="tab-contents" id="experience">
                     <ul>
-                        <li><span>2021-Current</span><br>UI/UX Design Training at ET Institute</li>
-                        <li><span>2019-2021</span><br>Team lead at StarApp LLC.</li>
-                        <li><span>2016-2019</span><br>Intenrship at ekart eCommerce.</li>
+                        <li><span>June, 2023</span><br>Web Development</li>
+                        <li><span>March, 2023</span><br>Web Development Bootcamp</li>
+                        <li><span>Sept, 2018</span><br>Certification in Typing</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>2021</span><br>MSc in Computer Science from Dr. Ambedkar College Dikshabhoomi, Nagpur.</li>
-                        <li><span>2019</span><br>BSc in Electronic and Communication from Dhote Bandhu Science College, Gondia.</li>
+                        <li><span>2019-2021</span><br>MSc in Computer Science from Dr. Ambedkar College Dikshabhoomi, Nagpur.</li>
+                        <li><span>2016-2019</span><br>BSc in Electronic and Communication from Dhote Bandhu Science College, Gondia.</li>
                     </ul>
                 </div>
             </div>
@@ -134,6 +134,7 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-solid fa-home"></i>Gondia, Maharashtra</p> 
                     <p><i class="fa-sharp fa-solid fa-paper-plane"></i>anmolbiranwar007@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i>+91 7798670864</p> 
                     <div class="social-icons">
@@ -145,21 +146,23 @@
                     <a href="images/Anmol_Frontend_Fresher.pdf" download="" class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
-                    <form>
+                    <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="email" placeholder="Your Email" required>
+                        <input type="email" name="Email" placeholder="Your Email" required>
                         <textarea name="Message"rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn btn2">Submit</button>
                     </form>
+                    <span id="msg"></span>
                 </div>
             </div>
         </div>
         <div class="copyright">
-            <p>Copyright @ Anmol</p>
+            <p>All copyrights belong to user &copy; <span id="year"></span></p>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
-<script>
+<!-- <script>
     var tablinks=document.getElementsByClassName("tab-links");
     var tabcontents=document.getElementsByClassName("tab-contents");
 
@@ -182,5 +185,23 @@
     function closemenu(){
         sidemenu.style.right="-200px";
     }
-</script>
+</script> -->
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycby5geDcI-ZC74T-hKjfVPHubzfqpKNjE1D5pooXhmaxM-sAadnjUlJMsN1i5lnAWWtnCw/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg=document.getElementById("msg")
+  
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+            msg.innerHTML="Message sent successfully"
+            setTimeout(function(){
+                msg.innerHTML=""
+            },5000)
+            form.reset()
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
 </html>
