--- a/index.html
+++ b/index.html
@@ -138,9 +138,10 @@
                     <p><i class="fa-sharp fa-solid fa-paper-plane"></i>anmolbiranwar007@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i>+91 7798670864</p> 
                     <div class="social-icons">
-                        <a href="https://www.facebook.com/anmol.biranwar"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/anmol_biranwar/"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://twitter.com/anmol_biranwar"><i class="fa-brands fa-twitter"></i></a>
+                        <!-- <a href="https://www.facebook.com/anmol.biranwar"><i class="fa-brands fa-facebook"></i></a> -->
+                        <!-- <a href="https://www.instagram.com/anmol_biranwar/"><i class="fa-brands fa-instagram"></i></a> -->
+                        <a href="https://github.com/anmolbiranwar"><i class="fa-brands fa-github"></i></a>
+                        <!-- <a href="https://twitter.com/anmol_biranwar"><i class="fa-brands fa-twitter"></i></a> -->
                         <a href="https://www.linkedin.com/in/anmol-biranwar-165949205/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                     <a href="images/Anmol_Frontend_Fresher.pdf" download="" class="btn btn2">Download CV</a>
