--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
                     </div>
                 </div>
                 <div class="work">
+                    <img src="images/work-3.png" alt="">
+                    <div class="layer">
+                        <h3>My Restaurant</h3>
+                        <p>"
+                            "Discover culinary perfection at My Restaurant. Join us for an unforgettable dining experience, where flavors come to life.""</p>
+                        <a href="https://myrestaurantractapp.netlify.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    </div>
+                </div>
+                <div class="work">
                     <img src="images/work-2.png" alt="">
                     <div class="layer">
                         <h3>News Website- API Based Project</h3>
@@ -116,14 +125,7 @@
                         <a href="http://127.0.0.1:5501/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
-                <div class="work">
-                    <img src="images/work-3.png" alt="">
-                    <div class="layer">
-                        <h3>Portfolio</h3>
-                        <p>"My name is Anmol Biranwar, and my portfolio is a representation of all that I have learned."</p>
-                        <a href="https://github.com/anmolbiranwar/Portfolio"><i class="fa-solid fa-up-right-from-square"></i></a>
-                    </div>
-                </div>
+                
             </div>
             <a href="#" class="btn">See more</a>
         </div>
