--- a/index.html
+++ b/index.html
@@ -39,23 +39,28 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>My name is Anmol Biranwar, and I am a passionate and skilled React Frontend-Developer with a strong focus on creating exceptional user experiences. With expertise in HTML, CSS, JavaScript and frontend ReactJS framework, I build visually stunning and responsive websites and web applications.</p>
+                <p>I am a passionate and skilled React Frontend-Developer with a strong focus on creating exceptional user experiences. With expertise in HTML, CSS, JavaScript and frontend ReactJS framework, I build visually stunning and responsive websites and web applications.</p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                     <p class="tab-links" onclick="opentab('experience')">Certification</p>
                     <p class="tab-links" onclick="opentab('education')">Education</p>
                 </div>
                 <div class="tab-contents active-tab" id="skills">
-                    <ul>
+                    <!-- <ul>
                         <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
                         <li><span>Web Development</span><br>Web app Development</li>
                         <li><span>App Development</span><br>Building Android/iOS apps</li>
+                    </ul> -->
+                    <ul>
+                        <li><span>Frontend</span><br>HTML, CSS, JavaScript, Bootstrap, ReactJS</li>
+                        <li><span>Software Testing</span><br>Manual Testing, Automation Testing(Selenium with JAVA)</li>
+                        <li><span>Other Technologies</span><br>GitHub, Git, VSCode</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="experience">
                     <ul>
                         <li><span>June, 2023</span><br>Web Development</li>
-                        <li><span>March, 2023</span><br>Web Development Bootcamp</li>
+                        <li><span>March, 2023</span><br>Software Testing</li>
                         <li><span>Sept, 2018</span><br>Certification in Typing</li>
                     </ul>
                 </div>
@@ -77,21 +82,21 @@
                 <div>
                     <i class="fa-solid fa-code"></i>
                     <h2>Web Devlopment</h2>
-                    <p>Self Coded Responsive Websites also make a Websites According to the customer requirement.</p>
+                    <p>"Aspiring Frontend Web Developer with a foundation in React.js. Enthusiastic about building dynamic and interactive user interfaces. Committed to expanding proficiency in React and contributing to engaging web applications."</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-crop"></i>
-                    <h2>UI/UX Design</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea distinctio beatae quas fugiat id. Rem, blanditiis, sint inventore quis perspiciatis non modi illum nisi sunt nemo officiis autem ut in?</p>
+                    <h2>Software Testing</h2>
+                    <p>"Aspiring software tester with a strong foundation in testing fundamentals and a passion for ensuring software quality. Quick learner with excellent attention to detail and a dedication to contributing to high-quality software development."</p>
                     <a href="#">Learn more</a>
                 </div>
-                <div>
+                <!-- <div>
                     <i class="fa-brands fa-app-store"></i>
                     <h2>App Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea distinctio beatae quas fugiat id. Rem, blanditiis, sint inventore quis perspiciatis non modi illum nisi sunt nemo officiis autem ut in?</p>
                     <a href="#">Learn more</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -104,7 +109,7 @@
                     <img src="images/work-1.png" alt="">
                     <div class="layer">
                         <h3>Shop Karo-The Complete E-Commerce Website</h3>
-                        <p>Shop Karo is The Complete Men’s Fashion E-commerce Website Which Offering Products across various categories, Men’s Grooming, shirt, Jeans, Shoes, Goggles, purse, etc. The Website of Shop Karo provides all the Men’s Fashion Products that are offered by the company.</p>
+                        <p>"Shop Karo is The Complete Men’s Fashion E-commerce Website Which Offering Products across various categories, Men’s Grooming, shirt, Jeans, Shoes, Goggles, purse, etc. The Website of Shop Karo provides all the Men’s Fashion Products that are offered by the company."</p>
                         <a href="https://hksolution.in/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -112,17 +117,16 @@
                     <img src="images/work-3.png" alt="">
                     <div class="layer">
                         <h3>My Restaurant</h3>
-                        <p>"
-                            "Discover culinary perfection at My Restaurant. Join us for an unforgettable dining experience, where flavors come to life.""</p>
+                        <p>"Discover culinary perfection at My Restaurant. Join us for an unforgettable dining experience, where flavors come to life."</p>
                         <a href="https://myrestaurantractapp.netlify.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="images/work-2.png" alt="">
                     <div class="layer">
-                        <h3>News Website- API Based Project</h3>
-                        <p>Discover a world of news at your fingertips with our comprehensive News Website powered by the latest News API. Stay updated on global events, breaking news, politics, business, technology, entertainment, sports, and more. Our user-friendly interface presents curated articles from trusted sources, providing you with accurate and timely information.</p>
-                        <a href="http://127.0.0.1:5501/index.html"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <h3>TextUtils</h3>
+                        <p>"This is a React JS based web app used to manipulate, analyze and modify your text. This website uses React Router setup for displaying the webpages and making it a single page application. React Function based component was used to build this Webpage"</p>
+                        <a href="https://textutilsreactwebsites.netlify.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 
