--- a/index.html
+++ b/index.html
@@ -41,11 +41,24 @@
                 <h1 class="sub-title">About Me</h1>
                 <p>I am a passionate and skilled React Frontend-Developer with a strong focus on creating exceptional user experiences. With expertise in HTML, CSS, JavaScript and frontend ReactJS framework, I build visually stunning and responsive websites and web applications.</p>
                 <div class="tab-titles">
-                    <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                    <p class="tab-links" onclick="opentab('experience')">Certification</p>
+                    <p class="tab-links active-link" onclick="opentab('experience')">Experience</p>
+                    <p class="tab-links " onclick="opentab('skills')">Skills</p>
+                    <p class="tab-links" onclick="opentab('certification')">Certification</p>
                     <p class="tab-links" onclick="opentab('education')">Education</p>
                 </div>
-                <div class="tab-contents active-tab" id="skills">
+                <div class="tab-contents active-tab" id="experience">
+                    <!-- <ul>
+                        <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
+                        <li><span>Web Development</span><br>Web app Development</li>
+                        <li><span>App Development</span><br>Building Android/iOS apps</li>
+                    </ul> -->
+                    <ul>
+                        <li><span>React.JS Intern | Oct 2023 - Jan 2024</span><br>Techquadra Software Solutions, Nagpur ,MH</li>
+                        <li><span>Web Developer Intern (Virtual) | Aug 2023 - Sep 2023</span><br>Bharat Intern, Bhopal, MP</li>
+                        
+                    </ul>
+                </div>
+                <div class="tab-contents" id="skills">
                     <!-- <ul>
                         <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
                         <li><span>Web Development</span><br>Web app Development</li>
@@ -54,10 +67,10 @@
                     <ul>
                         <li><span>Frontend</span><br>HTML, CSS, JavaScript, Bootstrap, ReactJS</li>
                         <li><span>Software Testing</span><br>Manual Testing, Automation Testing(Selenium with JAVA)</li>
-                        <li><span>Other Technologies</span><br>GitHub, Git, VSCode</li>
+                        <li><span>Other Technologies</span><br>GitHub, Git, VSCode, Postman</li>
                     </ul>
                 </div>
-                <div class="tab-contents" id="experience">
+                <div class="tab-contents" id="certification">
                     <ul>
                         <li><span>June, 2023</span><br>Web Development</li>
                         <li><span>March, 2023</span><br>Software Testing</li>
@@ -110,7 +123,7 @@
                     <div class="layer">
                         <h3>Shop Karo-The Complete E-Commerce Website</h3>
                         <p>"Shop Karo is The Complete Men’s Fashion E-commerce Website Which Offering Products across various categories, Men’s Grooming, shirt, Jeans, Shoes, Goggles, purse, etc. The Website of Shop Karo provides all the Men’s Fashion Products that are offered by the company."</p>
-                        <a href="https://hksolution.in/"><i class="fa-solid fa-up-right-from-square"></i></a>
+                        <a href="https://shopkaro-ecommerse-website.netlify.app/"><i class="fa-solid fa-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -131,7 +144,7 @@
                 </div>
                 
             </div>
-            <a href="#" class="btn">See more</a>
+            <a href="https://github.com/anmolbiranwar" class="btn">See more</a>
         </div>
     </div>
     <!-- Contact -->
@@ -140,7 +153,7 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-home"></i>Gondia, Maharashtra</p> 
+                    <p><i class="fa-solid fa-home"></i>Nagpur, Maharashtra</p> 
                     <p><i class="fa-sharp fa-solid fa-paper-plane"></i>anmolbiranwar007@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i>+91 7798670864</p> 
                     <div class="social-icons">
