--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i class="fa-solid fa-home"></i>Nagpur, Maharashtra</p> 
-                    <p><i class="fa-sharp fa-solid fa-paper-plane"></i>anmolbiranwar007@gmail.com</p>
+                   <p> <a href="mailto:anmolbiranwar007@gmail.com" class="mail"><i class="fa-sharp fa-solid fa-paper-plane"></i> anmolbiranwar007@gmail.com</a> </p>
+                    <!-- <p><i class="fa-sharp fa-solid fa-paper-plane"></i>anmolbiranwar007@gmail.com</p> -->
                     <p><i class="fa-solid fa-square-phone"></i>+91 7798670864</p> 
                     <div class="social-icons">
                         <!-- <a href="https://www.facebook.com/anmol.biranwar"><i class="fa-brands fa-facebook"></i></a> -->
